fix alignment issues in the table

--- a/src/app/components/admin/tab-sections/users-tab-section/users-tab-section.component.scss
+++ b/src/app/components/admin/tab-sections/users-tab-section/users-tab-section.component.scss
@@ -2,6 +2,11 @@
   vertical-align: middle;
 }
 
+td {
+  padding: 8px;
+  padding-left: 16px;
+}
+
 th {
   vertical-align: middle;
 }
